--- a/src/ChrisMavrommatis.StartupTasks/ChrisMavrommatis.StartupTasks.csproj
+++ b/src/ChrisMavrommatis.StartupTasks/ChrisMavrommatis.StartupTasks.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>ChrisMavrommatis.StartupTasks</PackageId>
@@ -10,7 +10,7 @@
 		<Authors>Chris Mavrommatis</Authors>
 		<PackageProjectUrl>https://github.com/ChrisMavrommatis/ChrisMavrommatis.StartupTasks</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/ChrisMavrommatis/ChrisMavrommatis.StartupTasks</RepositoryUrl>
-		<Version>2.0.4</Version>
+		<Version>2.1.0</Version>
 		<PackageIcon>package-icon.png</PackageIcon>
 		<AssemblyName>ChrisMavrommatis.StartupTasks</AssemblyName>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
@@ -29,8 +29,8 @@
 	</ItemGroup>
 
 	<ItemGroup >
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0" />
 	</ItemGroup>
 
 </Project>
